# previous-version-1

./: .tasks.md  Cargo.toml  README.md
api/rialight/: Cargo.toml  README.md
api/rialight/src/: lib.rs
api/rialight_display/: Cargo.toml
api/rialight_display/src/: .tasks.md
api/rialight_filesystem/: Cargo.toml
api/rialight_filesystem/src/: lib.rs  path_helpers.rs
api/rialight_localization/: Cargo.toml  README.md
api/rialight_localization/data/: language.json  region.json
api/rialight_localization/src/: language.rs  lib.rs  locale_bundle.rs  region.rs
api/rialight_net/: Cargo.toml
api/rialight_pi/: Cargo.toml  README.md
api/rialight_pi/src/: lib.rs
api/rialight_sound/: Cargo.toml
api/rialight_util/: Cargo.toml
api/rialight_util/src/: lib.rs
docs/: README.md
docs/project-management/: debugging.md  exporting.md  localization.md  start-a-new-project.md
docs/sdk-management/: install-the-sdk.md
starter-template/: Cargo.toml  README.md  Rialight.toml  build.rs
starter-template/src/: localization.rs  main.rs
