[package]
name = "$projectshortid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rialight = "1"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
rialight_pi = "1"