[package]
name = "rialight"
version = "1.0.0"
edition = "2021"
authors = ["matheusdiasdesouzads <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/rialight"
license = "ISC"
description = "Runtime API for developing games and rich-interface applications."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.3.0"
sv_str = "1"