[package]
name = "rialight_filesystem"
version = "1.0.1"
edition = "2021"
authors = ["matheusdiasdesouzads <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/rialight"
license = "ISC"
description = "Rialight file system module."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
lazy-regex = "2.3.1"
sv_str = "1.0.4"
tokio = { version = "1.21.2", features = ["fs"] }