[package]
name = "rialight_localization"
version = "1.0.0"
edition = "2021"
authors = ["matheusdiasdesouzads <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/rialight"
license = "ISC"
description = "Rialight localization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language-objects = "1"
message-locator = "1"