[package]
name = "rialight_localization"
version = "1.3.1"
edition = "2021"
authors = ["matheusdiasdesouzads <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/rialight"
license = "ISC"
description = "Rialight localization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
lazy-regex = "0.1.4"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = "0.11.11"
rialight_filesystem = "1"
rialight_util = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }