[package]
name = "rialight_net"
version = "1.0.0"
edition = "2021"
authors = ["matheusdiasdesouzads <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/rialight"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
