[package]
name = "rialight_pi"
version = "1.0.0"
edition = "2021"
authors = ["matheusdiasdesouzads <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/rialight/rialight"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.3.0"
serde = "1.0.147"
toml = "0.5.9"